--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,11 +17,13 @@
     "animated-number-react": "^0.1.2",
     "bootstrap": "^5.3.2",
     "fslightbox-react": "^1.6.2-2",
+    "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-fancybox": "^0.2.5",
+    "react-i18next": "^14.1.0",
     "react-icons": "^4.12.0",
     "react-iframe": "^1.8.5",
     "react-player": "^2.14.0",
