--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "fslightbox-react": "^1.6.2-2",
     "i18next": "^23.10.1",
+    "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-countup": "^6.4.0",
@@ -33,6 +34,7 @@
     "reactstrap": "^9.2.1",
     "redux": "^5.0.0",
     "slick-carousel": "^1.8.1",
+    "start": "^5.1.0",
     "swiper": "^11.0.5",
     "use-count-up": "^3.0.1",
     "video-react": "^0.16.0",
