--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,23 +17,31 @@
     "animate.css-react": "^1.1.0",
     "animated-number-react": "^0.1.2",
     "bootstrap": "^5.3.2",
+    "cdbreact": "^1.5.19",
     "fslightbox-react": "^1.6.2-2",
     "i18next": "^23.10.1",
+    "multiselect-react-dropdown": "^2.0.25",
     "npm": "^10.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.11.4",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-dropzone-uploader": "^2.11.0",
     "react-fancybox": "^0.2.5",
     "react-i18next": "^14.1.0",
     "react-icons": "^4.12.0",
     "react-iframe": "^1.8.5",
+    "react-multiple-image-input": "^1.0.0",
     "react-player": "^2.14.0",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tag-input": "^6.10.2",
     "reactstrap": "^9.2.1",
     "redux": "^5.0.0",
     "slick-carousel": "^1.8.1",
